--- a/Main.html
+++ b/Main.html
@@ -101,7 +101,7 @@
             </section>
             <section class="videos">
                 <section class="videos-section">
-                    <section class="video-container" id="v-1">
+                    <section class="video-container"> 
                         <div class="thumbnail">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-11 224641.png" alt="Miniatura-v1" class="thumbnails-size">
                         </div>
@@ -110,8 +110,8 @@
                                 <img src=".\images\videos images\Captura de pantalla 2025-08-11 225902.png"
                                     alt="Logo del Canal de V1" class="channel-size">
                             </div>
-                            <div class="video-name-1">
-                                <p class="channel-title1" id="title-1"><strong>“A la caza del Cartel de los Soles”: EEUU
+                            <div class="video-name">
+                                <p class="video-title"><strong>“A la caza del Cartel de los Soles”: EEUU
                                         difunde entrenamientos de captura</strong>
                                 </p>
                             </div>
@@ -120,12 +120,12 @@
                                     alt="opciones del video" class="options-size">
                             </div>
                         </section>
-                        <div class="viewers-name-1">
+                        <div class="viewers-name">
                             <p>David Placer</p>
                             <p>58 k vistas • Transmitido hace 2 horas</p>
                         </div>
                     </section>
-                    <section class="video-container" id="v-2">
+                    <section class="video-container">
                         <div class="thumbnail">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-12 194731.png"
                                 alt="miniatura-v2" class="thumbnails-size">
@@ -135,7 +135,7 @@
                                 <img src=".\images\videos images\Captura de pantalla 2025-08-12 194813.png"
                                     alt="Logo del Canal de V2" class="channel-size">
                             </div>
-                            <div class="video-name-2">
+                            <div class="video-name">
                                 <p><strong>HICE UNA ESFERA PERFECTA DE TIERRA ORDINARIA - UNA ANTIGUA TÉCNICA </strong>
                                 </p>
                             </div>
@@ -144,12 +144,12 @@
                                     alt="opciones del video" class="options-size">
                             </div>
                         </section>
-                        <div class="viewers-name-2">
+                        <div class="viewers-name">
                             <p>El Mundo de Slivki</p>
                             <p>2.6 M de vistas • hace 3 semanas</p>
                         </div>
                     </section>
-                    <section class="video-container" id="v-3">
+                    <section class="video-container">
                         <div class="thumbnail">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-13 001526.png"
                                 alt="estoy cansado jefe" class="thumbnails-size">
@@ -159,7 +159,7 @@
                                 <img src="images\videos images\Captura de pantalla 2025-08-13 001547.png"
                                     alt="logo del Canal de V3" class="channel-size" >
                             </div>
-                            <div class="video-name-3">
+                            <div class="video-name">
                                 <p><strong>¿Qué pasaría si arrojáramos nuestra basura a los volcanes?</strong></p>
                             </div>
                             <div class="video-options">
@@ -167,12 +167,12 @@
                                     alt="opciones del video" class="options-size">
                             </div>
                         </section>
-                        <div class="viewers-name-3">
+                        <div class="viewers-name">
                             <p>Qué pasaría si - What If Español</p>
                             <p>2.4 M de vistas • hace 5 años</p>
                         </div>
                     </section>
-                    <section class="video-container" id="v-4">
+                    <section class="video-container">
                         <div class="thumbnail">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-13 133608.png"
                                 alt="miniatura-v4" class="thumbnails-size">
@@ -182,19 +182,19 @@
                                 <img src=".\images\videos images\Captura de pantalla 2025-08-13 133633.png"
                                     alt="logo del canal de V4" class="channel-size">
                             </div>
-                            <div class="video-name-4">
+                            <div class="video-name">
                                 <p><strong>Los discos Bluray NO deberian EXISTIR LA DURA REALIDAD ☢️</strong></p>
                             </div>
                             <div class="video-options">
                                 <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="opciones del video" class="options-size">
                             </div>
                         </section>
-                        <div class="viewers-name-4">
+                        <div class="viewers-name">
                             <p>Danskyx</p>
                             <p>967 k vistas • hace 1 año</p>
                         </div>
                     </section>
-                    <section class="video-container" id="v-5">
+                    <section class="video-container">
                         <div class="thumbnail">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-13 173915.png"
                                 alt="miniatura-5" class="thumbnails-size">
@@ -204,7 +204,7 @@
                                 <img src=".\images\videos images\Captura de pantalla 2025-08-13 173927.png"
                                     alt="logo del Canal de V5" class="channel-size">
                             </div>
-                            <div class="video-name-5">
+                            <div class="video-name">
                                 <p><strong>La Entrada Decía “NO PASAR”... Pero Decidieron Ignorarla</strong></p>
                             </div>
                             <div class="video-options">
@@ -212,12 +212,12 @@
                                    
                             </div>
                         </section>
-                        <div class="viewers-name-5">
+                        <div class="viewers-name">
                             <p>Misterios Sumergidos</p>
                             <p>48 k vistas • hace 3 semanas</p>
                         </div>
                     </section>
-                    <section class="video-container" id="v-6">
+                    <section class="video-container">
                         <div class="thumbnail">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-13 180228.png"
                                 alt="miniatura-6" class="thumbnails-size">
@@ -227,7 +227,7 @@
                                 <img src=".\images\videos images\Captura de pantalla 2025-08-13 180245.png"
                                     alt="Logo del canal de v-6" class="channel-size">
                             </div>
-                            <div class="video-name-6">
+                            <div class="video-name">
                                 <p><strong>Pato es denunciado por atacar a mascotas y recibe prisión
                                         domiciliaria</strong></p>
                             </div>
@@ -236,12 +236,12 @@
                                     alt="opciones del video" class="options-size">
                             </div>
                         </section>
-                        <div class="viewers-name-6">
+                        <div class="viewers-name">
                             <p>EXCELSIOR</p>
                             <p>139 k vistas • hace 6 días</p>
                         </div>
                     </section>
-                    <section class="video-container" id="v-7">
+                    <section class="video-container">
                         <div class="thumbnail">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-13 183052.png"
                                 alt="miniatura-7" class="thumbnails-size">
@@ -251,19 +251,19 @@
                                 <img src=".\images\videos images\Captura de pantalla 2025-08-13 183118.png"
                                     alt="Logo del Canal de V7" class="channel-size">
                             </div>
-                            <div class="video-name-7">
+                            <div class="video-name">
                                 <p><strong>¿Qué pasa si entras a un microondas? (según la ciencia)</strong></p>
                             </div>
                             <div class="video-options">
                                 <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="opciones del video" class="options-size">
                             </div>
                         </section>
-                        <div class="viewers-name-7">
+                        <div class="viewers-name">
                             <p>Fan de Ciencia</p>
                             <p>25 k vistas • hace 12 días</p>
                         </div>
                     </section>
-                    <section class="video-container" id="v-8">
+                    <section class="video-container">
                         <div class="thumbnail">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-13 183825.png" alt="Miniatura-8" class="thumbnails-size">
                         </div>
@@ -272,19 +272,19 @@
                                 <img src=".\images\videos images\Captura de pantalla 2025-08-13 183849.png"
                                     alt="logo del Canal de V8" class="channel-size">
                             </div>
-                            <div class="video-name-8">
+                            <div class="video-name">
                                 <p><strong>TODAS las CLASES SOCIALES explicadas en 10 minutos</strong></p>
                             </div>
                             <div class="video-options">
                                 <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="opciones del video" class="options-size">
                             </div>
                         </section>
-                        <div class="viewers-name-8">
+                        <div class="viewers-name">
                             <p>Te hago un croquis</p>
                             <p>786 k vistas • hace 8 meses</p>
                         </div>
                     </section>
-                    <section class="video-container" id="v-9">
+                    <section class="video-container">
                         <div class="thumbnails">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-13 190109.png" alt="Miniaatura-9" class="thumbnails-size">
                         </div>
@@ -293,14 +293,14 @@
                                 <img src=".\images\videos images\Captura de pantalla 2025-08-13 190123.png"
                                     alt="logo del Canal de V9" class="channel-size">
                             </div>
-                            <div class="video-name-9">
+                            <div class="video-name">
                                 <p><strong>¿Qué es ese bicho en la pared?/La polilla del estuche</strong></p>
                             </div>
                             <div class="video-options">
                                 <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="opciones del video" class="options-size">
                             </div>
                         </section>
-                        <div class="viewers-name-9">
+                        <div class="viewers-name">
                             <p>Guia Salvaje</p>
                             <p>48 k vistas • hace 1 año</p>
                         </div>
